[package]
edition = "2021"
name = "native"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1"

anyhow = "1.0.69"
tokio = {version = "1", features = ["full"]}

chrono = "0.4.23"
dirs = "4.0.0"
opener = "0.5.2"
platform-dirs = "0.3.0"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
time = "0.3.20"
walkdir = "2.3.2"
zip = "0.6.4"

aws-config = "0.54.1"
aws-credential-types = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-sts = "0.24.0"
aws-smithy-types = "0.54.4"
aws-types = "0.54.1"
# To make proxy work if there is no direct connection to AWS
aws-smithy-client = {version = "0.53.1", features = ["client-hyper"]}
headers = "0.3.7"
hyper = "0.14.23"
hyper-proxy = "0.9.1"
url = "2.2.2"

futures = "0.3"
reqwest = {version = "0.11.6", features = ["blocking"]}
