[package]
edition = "2021"
name = "native"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1"

anyhow = "1.0.69"
tokio = {version = "1", features = ["full"]}

chrono = "0.4.23"
dirs = "4.0.0"
futures = "0.3"
opener = "0.5.2"
platform-dirs = "0.3.0"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
time = "0.3.20"
walkdir = "2.3.2"
zip = "0.6.4"

aws-config = "0.54.1"
aws-credential-types = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-sts = "0.24.0"
aws-smithy-types = "0.54.4"
aws-types = "0.54.1"
